Update of the graphical interface and kernel
Summer school updates (debugging of the graphical interface, addition of
tree files, update of the map and camera)